--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,24 @@
-.logo-image {
-  height: 30px;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.container {
+  width: 100vw;
+  padding: 20px;
+}
+
+.navbar > .container {
+  border: 1px solid black;
+}
+
+.navbar-brand,
+.navbar-nav {
+  font-size: 1.5rem;
+}
+
+.reg-form {
+  padding: 20px;
+
+  background-color: green;
 }
