--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,22 @@
-.logo-image {
-  height: 30px;
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  padding: 20px;
+  width: 100vw;
+}
+
+.navbar > .container {
+  border: 1px solid black;
+}
+
+.navbar-brand,
+.navbar-nav {
+  font-size: 1.5rem;
+}
+
+.reg-form {
+  background-color: green;
+  padding: 20px;
 }
